infra/realworld-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: realworld
  template:
    metadata:
      labels:
        app: realworld
    spec:
      containers:
      - name: realworld
        image: miueon/realworld-smithy4s:0.1.0-SNAPSHOT
        ports:
        - containerPort: 8080
